clang/test/BSC/Negative/SafeZone/implicit_conversion/implicit_conversion.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test that implicit numeric and enum conversions are FORBIDDEN
// Explicit casts are allowed, but implicit conversions remain forbidden

void test_implicit_numeric_conversion(void) {
  safe {
    long a = 2;
    // Implicit narrowing conversion is forbidden
    int b = a;  // expected-error{{conversion from type 'long' to 'int' is forbidden in the safe zone}}
  }

  safe {
    double x = 1.0;
    // Implicit high-precision to low-precision conversion is forbidden
    float y = x;  // expected-error{{conversion from type 'double' to 'float' is forbidden in the safe zone}}
  }

  safe {
    int val = 1;
    // Implicit char conversion is forbidden
    char c = val;  // expected-error{{conversion from type 'int' to 'char' is forbidden in the safe zone}}
  }

  safe {
    unsigned int a = 1;
    // Implicit signed/unsigned conversion is forbidden
    int b = a;  // expected-error{{conversion from type 'unsigned int' to 'int' is forbidden in the safe zone}}
  }
}

void test_implicit_enum_conversion(void) {
  enum E { ZERO, ONE, TWO };
  enum F { SUN, MON, TUES };

  safe {
    int a = 0;
    // Implicit int to enum conversion is forbidden
    enum E num = a;  // expected-error{{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}

    enum F day = SUN;
    // Implicit enum to enum conversion is forbidden
    num = day;  // expected-error{{conversion from type 'enum F' to 'enum E' is forbidden in the safe zone}}

    // Implicit enum to int conversion is forbidden
    a = num;  // expected-error{{conversion from type 'enum E' to 'int' is forbidden in the safe zone}}
  }
}
